src/test/ui/regions/regions-infer-at-fn-not-param.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-infer-at-fn-not-param.rs:23:57
   |
LL | fn take1<'a>(p: parameterized1) -> parameterized1<'a> { p }
   |                                                         ^

error[E0621]: explicit lifetime required in the type of `p`
  --> $DIR/regions-infer-at-fn-not-param.rs:23:57
   |
LL | fn take1<'a>(p: parameterized1) -> parameterized1<'a> { p }
   |                 --------------                          ^ lifetime `'a` required
   |                 |
   |                 help: add explicit lifetime `'a` to the type of `p`: `parameterized1<'a>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
